--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elysiajs/eden": "^1.4.5",
     "@tanstack/react-query": "^5.90.12",
+    "@upstash/redis": "^1.35.8",
     "elysia": "^1.4.19",
     "lucide-react": "^0.561.0",
     "nanoid": "^5.1.6",
