--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@elysiajs/eden": "^1.4.5",
     "@tanstack/react-query": "^5.90.12",
+    "@upstash/realtime": "^1.0.0",
     "@upstash/redis": "^1.35.8",
+    "date-fns": "^4.1.0",
     "elysia": "^1.4.19",
     "lucide-react": "^0.561.0",
     "nanoid": "^5.1.6",
@@ -19,7 +21,8 @@
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
